--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,7 +1,7 @@
 .navbar{
     width: 100%;
     height: 60px;
-    padding: 0px 40px;
+    padding: 0px 100px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -38,6 +38,6 @@
     transition: 0.2s ease-in-out;
 }
 .navbar li a:hover{
-    border-bottom:6px solid #81ffe8c0;
+    border-bottom:6px solid #81ffe8;
     background-color: rgba(129, 255, 232, 0.2);
 }
