Landing-Header added with Landing-about

--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -5,7 +5,7 @@
     left: 0;
     height: 100%;
     width: 78px;
-    background: #11101d;
+    background: black;
     z-index: 100;
     transition: all 0.5s ease;
     padding: 15px 0px 25px 0px;
