--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -1,14 +1,48 @@
 .home-section{
     position: relative;
-    background: #E4E9F7;
+    background-color: #111318;
     height: 100%;
     left: 78px;
     width: calc(100% - 78px);
     transition: all 0.5s ease;
+}
+.Landing-header{
+    /* background-color: #11101d; */
+    background-color: black;
+    width: 100%;
+    height: 100vh;
+    min-height: 600px;
+     /* background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(100px); */
+}
+.typingEffect{
+    position: absolute;
+    top: 220px;
+    color:whitesmoke;
+    margin-left: 10%;
+    font-size: 60px;
+    font-weight: 500;
+}
+/* ABOUT Section */
+.Landing-About-Head{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 144px;
+    /* font-style: normal; */
+    font-weight: 700;
+    line-height: 176px;
+    letter-spacing: 0.3em;
+    text-align: center;
+    color: #FFFFFF26
+    ;
+    height: 200px;
+    /* width: 752px; */
+    /* border-radius: nullpx; */
+    
 }
 @media screen and (max-width: 700px){
     .home-section{
         left: 0px;
         width: calc(100% - 0px);
     }
+    
 }
