--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -32,16 +32,23 @@
     color: #FFFFFF26;
     height: 200px;
 }
+
+/* Journey */
 .Timeline{
-    background-color:#e9ecef;
     width: 2px;
-    margin-left: 24px;
     position: relative;
+    margin-left: 24px;
+    background-color:#e9ecef;
 }
+
+/* Tech & Tools Heading */
+.TechAndTools-Heading{
+    font-size: 100px;
+}
+
 @media screen and (max-width: 700px){
     .home-section{
         left: 0px;
         width: calc(100% - 0px);
     }
-    
 }
