--- a/src/css/TechAndTools.css
+++ b/src/css/TechAndTools.css
@@ -9,14 +9,15 @@
     color: #35363B;
     -webkit-box-reflect: below -55px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));;
 }
-.comb{
+.maze{
     width: 100px;
     height: 100px;
     clip-path : polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
     /* clip-path:  polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%); */
-    background-color: #f6e118;
-    background-image: url(../icons/javaScript.png);
+    background-color: #fff;
+    /* background-image: url(../icons/javaScript.png); */
     background-position: center;
     background-size: 70px;
     background-repeat: no-repeat;
+    border: 1px solid black;
 }
