--- a/src/css/TechAndTools.css
+++ b/src/css/TechAndTools.css
@@ -7,7 +7,7 @@
     text-align: center;
     height: 117px;
     color: #35363B;
-    -webkit-box-reflect: below -55px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));;
+    -webkit-box-reflect: below -55px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
 }
 .maze{
     width: 100px;
