certification page content update

--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -38,15 +38,9 @@
 }
 
 .profileImage{
-    position: absolute;
-    width: 486px;
-    height: 342px;
-    left: 962px; 
-   top: 750px;
-   
-    
-filter: grayscale(100%);
-background-blend-mode: luminosity;
+opacity:80%;
+/* filter: grayscale(100%); */
+/* background-blend-mode: luminosity; */
 
 
 }
