certification page content update

--- a/src/css/Achievements.css
+++ b/src/css/Achievements.css
@@ -13,6 +13,14 @@
 .achivements-Heading-image img{
     height: 400px;
     width: 400px;
+    -webkit-animation: rotateY 1s infinite linear;
+  animation: rotateY 5s infinite linear;
+}
+@-webkit-keyframes rotateY {
+  to { -webkit-transform: rotateY(360deg); }
+}
+@keyframes rotateY {
+  to { transform: rotateY(360deg); }
 }
 .description{
     color: #979797;
