project heading animation

--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -23,6 +23,17 @@
     line-height: 146px;
     letter-spacing: 0.25em;
     color: #F8F8F869;
+    /* -webkit-text-stroke: #F8F8F869 3px; */
+    color: transparent;
+    background:url(../images/back.png);
+    -webkit-background-clip: text;
+    background-position: 0 0;
+    animation: back 20s linear infinite;
+}
+@keyframes back{
+    100%{
+        background-position: 2000px 0;
+    }
 }
 
 .projects-Heading-image img{
