--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -36,7 +36,18 @@
     height: 500px;
     background: #171B1E;
     border-radius: 10px;
+    animation: slog 0.3s 1;
+}
+@keyframes slog {
+    0% {
+        height: 0px;
+        width: 0px;
+    }
 
+    100% {
+        width: 550px;
+        height: 550px;
+    }
 }
 .TechStack-SubHeading{
     font-size: 50px;
@@ -45,4 +56,22 @@
     letter-spacing: 0em;
     text-align: center;
     color:  #9A9A9A;
+}
+
+.bg-modal1,
+.bg-modal2,
+.bg-modal3,
+.bg-modal4 {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.747);
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    z-index: 250;
 }
