--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -3,7 +3,7 @@
     width: 500px;
     border-radius: 20px;
     background-color: linear-gradient(357.78deg, rgba(0, 0, 0, 0.92) 17.76%, rgba(0, 0, 0, 0) 48.07%);
-    /* background-image: url(../images/ProjectBackgroundOne.png); */
+    background-image: url(../images/ProjectBackgroundOne.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
