Landing page Mobile view done

--- a/src/css/Blogs.css
+++ b/src/css/Blogs.css
@@ -18,3 +18,16 @@
     letter-spacing: 0.25em;
     color: #F8F8F869;
 }
+
+@media screen and (max-width: 600px){
+    .blogMaze{
+        width: 160px;
+        height: 160px;
+        clip-path : polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        border: 1px solid black;
+    }
+    
+}
