--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -12,6 +12,7 @@
     left: 78px;
     width: calc(100% - 78px);
     transition: all 0.5s ease;
+    overflow-x: hidden;
 }
 .Landing-header{
     background-color: black;
@@ -47,14 +48,92 @@
     background-color:#e9ecef;
 }
 
-/* Tech & Tools Heading */
+/* Tech & Tools Start  */
 .TechAndTools-Heading{
     font-size: 100px;
 }
+.TechAndTools-SubHeading{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 76px;
+    font-weight: 700;
+    line-height: 117px;
+    letter-spacing: 0.1em;
+    text-align: center;
+    height: 117px;
+    color: #35363B;
+    -webkit-box-reflect: below -55px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+}
+.maze{
+    width: 100px;
+    height: 100px;
+    clip-path : polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+    /* clip-path:  polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%); */
+    background-color: #fff;
+    /* background-image: url(../icons/javaScript.png); */
+    background-position: center;
+    background-size: 70px;
+    background-repeat: no-repeat;
+    border: 1px solid black;
+}
 
-@media screen and (max-width: 700px){
+/* Tech & Tools End  */
+
+@media screen and (max-width: 600px){
     .home-section{
         left: 0px;
         width: calc(100% - 0px);
+    }
+    /* Landing Hero Section Css Start */
+    .Landing-header{
+        background-color: black;
+        width: 100%;
+        height: 50vh;
+        min-height: 500px;
+    }
+    .typingEffect{
+        top: 130px;
+        font-size: 22px;
+    }
+    .typingEffect p:nth-child(1){
+        margin: 10px 0px;
+    }
+    /* Landing Hero Section Css End */
+
+    .Landing-Heading{
+        font-size: 50px;
+        height: 160px;
+    }
+    .profileImage{
+        display: flex;
+        justify-content: space-around;
+    }
+    .profileImage img{
+        width: 200px;
+        margin-bottom: 50px;
+    }
+
+    /* Tech & tools part */
+    .TechAndTools-Heading{
+        font-size: 50px;
+        line-height: 56px;
+        height: 100px;
+        text-align: center;
+    }
+    .TechAndTools-SubHeading{
+        font-size: 40px;
+        line-height: 50px;
+        height: 80px;
+    }
+    .maze{
+        width: 80px;
+        height: 80px;
+        clip-path : polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+        /* clip-path:  polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%); */
+        background-color: #fff;
+        /* background-image: url(../icons/javaScript.png); */
+        background-position: center;
+        background-size: 50px;
+        background-repeat: no-repeat;
+        border: 1px solid black;
     }
 }
