--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -42,12 +42,13 @@
 }
 
 /* POPUP CARD */
+
 .Project-about{
     width: 800px;
     height: 500px;
     background: #171B1E;
     border-radius: 10px;
-    animation: slog 0.3s 1;
+    animation: slog 0.5s 1 ease;
 }
 @keyframes slog {
     0% {
