--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -15,7 +15,7 @@
     text-align: left;
 }
 .projectCard-long{
-    width: 472px;
+    width: 500px;
     height: 550px;
     border-radius: 20px;
     background-color: linear-gradient(357.78deg, rgba(0, 0, 0, 0.92) 17.76%, rgba(0, 0, 0, 0) 48.07%);
@@ -93,7 +93,9 @@
 .bg-modal1,
 .bg-modal2,
 .bg-modal3,
-.bg-modal4 {
+.bg-modal4,
+.bg-modal5,
+.bg-modal6 {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.747);
@@ -123,5 +125,14 @@
     .projectCard-long img{
         width: 20px;
         height: 20px;
+    }
+
+    .projects-header{
+        height: 70vh;
+    }
+    .projects-Heading-text{
+        font-size: 60px;
+        line-height: 80px;
+        letter-spacing: 0.25em;
     }
 }
