--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -135,4 +135,15 @@
         line-height: 80px;
         letter-spacing: 0.25em;
     }
+
+    /* POPUP CARD */
+
+    .Project-about{
+        width: 800px;
+        height: 750px;
+        padding-bottom: 50px;
+        background: #171B1E;
+        border-radius: 10px;
+        animation: slog 0.5s 1 ease;
+    }
 }
