--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,6 +1,6 @@
 nav{
     display: none;
-    position: fixed;
+    position: fixed!important;
 }
 .content {
     max-width: 1250px;
@@ -8,7 +8,7 @@ nav{
     padding: 15px 34px;
  }
  .bar {
-    position: fixed;
+    position: fixed!important;
     z-index: 1005;
     width: 100%;
     transition: all 0.3s ease;
@@ -30,7 +30,7 @@ nav{
     color: #343434;
  }
  .sticky {
-    position: fixed;
+    position: fixed!important;
     padding: 0px;
     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
     height: 70px;
@@ -180,7 +180,7 @@ nav{
  @media (max-width: 600px) {
     nav{
         display: block;
-        position: fixed;
+        position: fixed!important;
         z-index: 150;
     }
     body.disabledScroll {
@@ -212,7 +212,7 @@ nav{
        margin-left: 0px;
     }
     .bar .menu-list {
-       position: fixed;
+       position: fixed!important;
        top: 0;
        left: 0;
        height: 100vh;
@@ -233,7 +233,7 @@ nav{
        clip-path: circle(75%);
     }
     .bar .menu-list li {
-       margin-top: 70px;
+       margin-top: 50px;
        padding: 20px 0;
     }
     .bar .menu-list li a {
