--- a/src/css/Journey.css
+++ b/src/css/Journey.css
@@ -1,7 +1,16 @@
 .Journey-header{
     width: 100%;
     height: 50vh;
-    /* border-bottom: 2px solid white; */
+    /* border-bottom: 2px solid gray; */
+    /* z-index:99; */
+}
+.video-background{
+    position: absolute;
+    width: 100%;
+    height: 50vh;
+    /* left: 50%; */
+    object-fit: cover;
+    /* z-index: -1; */
 }
 .journeyMaze{
     border: 3px solid transparent;
