--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -10,6 +10,7 @@
     background-color: #111318;
     height: 100%;
     left: 78px;
+    z-index: -3;
     width: calc(100% - 78px);
     transition: all 0.5s ease;
     overflow-x: hidden;
