--- a/src/css/Animation.css
+++ b/src/css/Animation.css
@@ -1,9 +1,11 @@
-
-
 .animated-text {
   font-weight: 700;
   text-align: center;
-  height : 200px;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   font-family: Hack, sans-serif;
   text-transform: uppercase;
   background: linear-gradient(90deg, #000, #fff, #000);
