--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -130,8 +130,7 @@
 
     .Project-about{
         width: 100vw;
-        height: 100vh;
-        min-height: 650px;
+        height: 640px;
         background: #171B1E;
         border-radius: 10px;
         animation: slog 0.5s 1 ease;
