--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -130,9 +130,14 @@
 
     .Project-about{
         width: 100vw;
-        height: 640px;
+        height: 600px;
         background: #171B1E;
         border-radius: 10px;
         animation: slog 0.5s 1 ease;
     }
+    .TechStack-SubHeading{
+        font-size: 30px;
+        line-height: 45px;
+    }
+    
 }
